@@ -2,9 +2,13 @@
 
 package A::NEW::CALLER {
   use Moose;
+  with 'Paws::Net::CallerRole';
+  sub do_call { return 'CALLER1' }
 };
 package A::NEW::CALLER2 {
   use Moose;
+  with 'Paws::Net::CallerRole';
+  sub do_call { return 'CALLER2' }
 };
 
 
@@ -17,7 +21,7 @@ use Test::More;
 {
   # Get an Paws object, with defaults and then a service
   my $aws = Paws->new;
-  cmp_ok($aws->config->caller, 'eq', 'Paws::Net::Caller', 'Got default caller');
+  ok($aws->config->caller->isa('Paws::Net::Caller'), 'Got default caller');
   my $svc = $aws->service('SQS', region => 'eu-west-1', version => 1 );
   ok($svc->caller->isa('Paws::Net::Caller'), 'Correct default caller class');
 }
@@ -25,7 +29,7 @@ use Test::More;
 {
   # Personalize Paws object, then get a service
   my $aws = Paws->new(config => { caller => 'A::NEW::CALLER' });
-  cmp_ok($aws->config->caller, 'eq', 'A::NEW::CALLER', 'Got new caller');
+  ok($aws->config->caller->isa('A::NEW::CALLER'), 'Got new caller');
   my $svc = $aws->service('SQS', region => 'eu-west-1', version => 1 );
   ok($svc->caller->isa('A::NEW::CALLER'), 'Correct custom caller class');
   
