@@ -1,5 +1,6 @@
 package Test05Caller {
   use Moose;
+  with 'Paws::Net::CallerRole';
 
   sub do_call {
     my ($self, $service, $call_object) = @_;
