@@ -5,6 +5,8 @@
    were parsing the error message from the exception, you should now use Paws::Exceptions accessors
    to get the already parsed information
  - Refactoring in the different callers to move functionalities only where needed
+ - Refactored the config attribute of the Paws class. Also documented what you can configure from
+   the config, so now the "config" is official.
 
 0.08 19 May 2015 22:12:00
  - EC2 SpotFleet API calls
